# eomcalc

./: .eslintrc.yml  .gitignore  .prettierrc.yml  README.md  accessory_prefixes.html  build.js  generate-data.sh  generate-eom-data.cabal  generate-eom-skills.cabal  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
assets/app/: eom-calc.js
assets/css/: eom-calc.css
assets/js/: eom-calc.js
assets/script/: eom-calc.js
src/app/api/: eom.ts
src/app/components/: component.ts  filters.ts  skill-card.ts  trait-detail.ts  trait.ts
src/app/constants/: compare.ts  css.ts  eom.ts  keys.ts
src/app/helpers/: build-text.ts  comparators.ts  images.ts
src/app/mvcs/: service.ts
src/app/types/: json.d.ts  skill.ts  trait-info.ts  trait.ts
src/app/util/: compare.ts
src/css/: build-links.css  build.css  chosen-skills.css  eom-calc.css  rarity.css  skill-and-filter.css  skill-details.css  skill-list.css  styles.css  trait-details.css  traits.css
src/css/components/: build-text.css  filter.css  skill-card.css  skill-detail.css  trait-detail.css  trait.css
src/css/containers/: build.css  skill-and-filter.css
src/css/misc/: rarity.css
src/data/: enums.json  rarities.json  skill-descriptions  skill-details  skills-generated.json  skills.json  traits.json
src/hs/: Main.hs  generate-skills.hs
src/hs/EomJson/: EomJson.hs
src/hs/EomJson/Assembler/: Skills.hs  Traits.hs
src/hs/EomJson/Json/: Skill.hs  Trait.hs
src/hs/EomJson/Parse/: SkillDetails.hs  SkillsAndTraits.hs  TraitDetails.hs
src/hs/EomJson/Util/: Util.hs
src/html/: index.html
src/img/original/: passive.xcf  skillicon-9.29update.rar
src/js/: app.js  chosen-skills.js  constants.js  eom-calc.js  skill-list.js  util.js
src/js/components/: build-links.js  build-text.js  chosen-skills.js  filter.js  skill-card.js  skill-detail.js  skill-details.js  skill-info.js  skill-list.js  skills.js  trait-detail.js  trait-details.js  trait.js  traits.js
src/js/constants/: app.js  constants.js  css.js  data.js  filters.js  html.js  resources.js
src/js/helpers/: app.js  build-strings.js  build-text.js  build-validator.js  chosen-skills.js  filter.js  images.js  skills.js  traits.js
src/js/mvc/: controller.js  model.js  view.js
src/js/util/: app-util.js  util.js
src/lua/: lua2json.lua
src/script/: accessory_prefixes.js  compile_data.js  eom-calc.ts  util.js
src/script/api/: eom.ts
src/script/components/: build-text.ts  build.ts  filter.ts  filters.ts  skill-card.ts  skill-detail.ts  skill-list-and-filters.ts  trait-detail.ts  trait.ts
src/script/constants/: eom.ts  html.ts  resources.ts  results.ts
src/script/helpers/: build-skills.ts  build-text.ts  build-validator.ts  comparators.ts  filter.ts  images.ts  skills.ts  traits.ts
src/script/mvc/: controller.ts  model.ts  view.ts
src/script/mvcs/: controller.ts  model.ts  service.ts  view.ts
src/script/types/: build-change.ts  filter.ts  json.d.ts  skill.ts  trait-info.ts  trait.ts
src/script/util/: html.ts  string.ts  util.ts
src/scripts/: prefixes.js
src/sh/: mine-data.sh  util.sh
