cabal-version:       2.4
name:                Generate-EoM-Skills
version:             0.0.0.0
description:         Generate json file containing details about Echoes of Magic skills from game files
homepage:            https://github.com/erhickey/eomcalc#readme
license:             Unlicense
license-file:        LICENSE
author:              Eddie Hickey
maintainer:          Eddie Hickey <erhickey@gmail.com>
copyright:           2021 Eddie Hickey
build-type:          Simple
extra-source-files:  README.md

common common-options
  default-language:    Haskell2010
  build-depends:       base ^>= 4.13.0.0
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields

common ghc-opts
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable generate-skills
  import:              common-options, ghc-opts
  hs-source-dirs:      src/hs
  main-is:             generate-skills.hs
  build-depends:       aeson,
                       attoparsec,
                       bytestring,
                       containers,
                       text
  ghc-options:         -O2
